# SQL-Explainer

./: README.md  main.py  prompt_plan.md  pyproject.toml  spec.md  todo.md
.github/: copilot-instructions.md
sql_parser/: ddl_analyzer.py
