[project]
name = "sql-explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.7",
    "mermaid-py>=0.7.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "sqlglot>=26.6.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.32.0",
]
